@@ -68,11 +68,11 @@ public class JNCalendar extends JTable {
 				if (val != null) {
 					if (val
 						.toString()
-						.equals(new Integer(_date.getDay()).toString()))
+						.equals(Integer.valueOf(_date.getDay()).toString()))
 						return;
 					_date =
 						new CalendarDate(
-							new Integer(val.toString()).intValue(),
+							Integer.valueOf(val.toString()).intValue(),
 							_date.getMonth(),
 							_date.getYear());
 					notifyListeners();
@@ -133,13 +133,13 @@ public class JNCalendar extends JTable {
 		Object d = this.getModel().getValueAt(row, column);
 		/*
 		 * if (d != null) return new JNCalendarCellRenderer( new
-		 * CalendarDate(new Integer(d.toString()).intValue(), _date.getMonth(),
+		 * CalendarDate(Integer.valueOf(d.toString()).intValue(), _date.getMonth(),
 		 * _date.getYear()));
 		 */
 		if (d != null)
 			renderer.setDate(
 				new CalendarDate(
-					new Integer(d.toString()).intValue(),
+					Integer.valueOf(d.toString()).intValue(),
 					_date.getMonth(),
 					_date.getYear()));
 		else
@@ -203,7 +203,7 @@ public class JNCalendarModel extends AbstractTableModel {
 			//int pos = (row * 7 + col) - firstDay + 1;
 			int pos = (row * 7 + (col + 1)) - firstDay;
 			if ((pos > 0) && (pos <= daysInMonth))
-				return new Integer(pos);
+				return Integer.valueOf(pos);
 			else
 				return null;
 
